# CXX-GPT

./: .gitignore  CMakeLists.txt  README.md
scripts/: preencode.py
src/: cuda_kernels.cu  cuda_kernels.cuh  dataset.hpp  demo.cpp  train.cpp
src/GPT/: gpt.hpp
src/LinearAttention/: linear_cuda_kernels.cu  linear_cuda_kernels.cuh  linear_demo.cpp  linear_gpt.hpp  linear_train.cpp
